tekton/tekton.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-ingress
spec:
  entryPoints:
    - websecure
  tls:
    secretName: builds-cyphers-dev-cert
  routes:
    - match: Host(`builds.cyphers.dev`)
      kind: Rule
      services:
        - kind: Service
          name: tekton-dashboard
          namespace: tekton
          port: 9097
